--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "JavaScript and NPM modules",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint",
+    "start": "node index.mjs"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/stacy6v6/git-exercise-2/issues"
   },
-  "homepage": "https://github.com/stacy6v6/git-exercise-2#readme"
+  "homepage": "https://github.com/stacy6v6/git-exercise-2#readme",
+  "devDependencies": {
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
+  }
 }
